messing with the home speakers section, I found out I am using the wrong container to add color, hoping my next commit will work with the changes I want

--- a/index.html
+++ b/index.html
@@ -237,14 +237,12 @@
             <div class="home-max-width1 max-content-container">
               <div class="home-content-container1">
                 <h1 class="home-text10 Heading1">
-                  <span>THE MOST INSIGHTFUL</span>
-                  <span class="home-text12">MARKETING CONFERENCE&nbsp;</span>
-                  <span>IN EUROPE</span>
+                  <span>THE MOST DELICIOUS</span>
+                  <span class="home-text12">SODA</span>
+                  <span>IN THE WORLD</span>
                 </h1>
                 <span class="home-text14">
-                  <span>
-                    GET YOUR TICKETS AT A HALF PRICE UNTIL 10.10.2022.
-                  </span>
+                  <span> GET YOUR DELICIOUS SODA BEFORE IT'S GONE! </span>
                   <br />
                   <span>HURRY UP, LIMITED NUMBERS AVAILABLE.</span>
                 </span>
