got rid of the event page, moved the pepse logo and adjusted the path to that photo on the site

--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
           <!--Navigation component-->
           <header data-role="Header" class="navigation-header">
             <div class="navigation-max-width">
-              <img alt="logo" src="event-page/public/pepselogo.png"
-              height=150px" width="auto" />
+              <img
+                alt="logo"
+                src="public/pepselogo.png"
+                height="150px"
+                width="auto"
+              />
               <div class="navigation-nav1">
                 <navigation-links-wrapper
                   class="navigation-links-wrapper"
